[package]
name = "cc2538-hal"
version = "0.3.0"
keywords = ["no-std", "arm", "cortex-m", "cc2538"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Hardware abstraction layer for the CC2538 System-On-Chip"

[package.metadata.docs.rs]
targets = ["thumbv7m-none-eabi"]

[dependencies]
cc2538-pac = { version = "0.8.1", features = ["rt"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
circular-queue = "0.2.6"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
nb = "1.1.0"
paste = "1.0.14"
panic-rtt-target = { version = "0.2.0" }
rtt-target = "0.6.1"

[features]
default = []
